# TCC

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  TreeTest.cpp  class1.cpp  cmake_install.cmake  in  main.cpp  runTests  site.md  snippets.md  tcc_site.html  tests.cpp  tree  tree.cpp  tree.h  tree.hpp  whattotest.cpp
.github/workflows/: ccpp.yml
benchmarks/: CMakeLists.txt  benchmark.cpp  generate_queries.sh  graph.py  jump_preprocess_bench.cpp  jump_query_bench.cpp  naive_preprocess_bench.cpp  naive_query_bench.cpp  preorder_preprocess_bench.cpp  preorder_query_bench.cpp  preprocess_bench.sh  query_bench.sh  query_generator.cpp  runBench  table_preprocess_bench.cpp  table_query_bench.cpp
code/include/: Edge.hpp  JumpPointers.hpp  NaiveAlgorithm.hpp  Node.hpp  PreOrder.hpp  TableAlgorithm.hpp  Tree.hpp  edge.hpp  node.hpp  tree.hpp
code/src/: Edge.cpp  JumpPointers.cpp  NaiveAlgorithm.cpp  Node.cpp  PreOrder.cpp  TableAlgorithm.cpp  Tree.cpp  edge.cpp  node.cpp
generators/: generators.cpp  generators.hpp
include/: TableAlgorithm.hpp  edge.hpp  node.hpp  tree.hpp
modelo-latex/: artigo.tex  bibliografia.bib  tese.tex
modelo-latex/conteudo-exemplo/: 01-introducao.tex  02-latex.tex  03-tutorial.tex  04-exemplos.tex  apendice-catch2.tex  apendices.tex  catch2-1.cpp  corpo-artigo.tex  folhas-de-rosto.tex  jump_preprocess.psc  jump_query.psc  naive_query.psc  preorder_preprocess.psc  preorder_query.psc  resumo-abstract.tex  table_preprocessing.psc  table_query.psc  tree.psc
src/: edge.cpp  node.cpp  tree.cpp
tests/: EdgeTests.cpp  NodeTests.cpp  TableAlgorithmTests.cpp  Tests.cpp  TreeTests.cpp  TreeTests.hpp
(+19 files in other folders)
